<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/rulesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rulesLabel"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/minNumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/minNumLabel" />

            <TextView
                android:id="@+id/maxNumLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/maxNumLabel" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/minNumTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ems="10"
                android:hint="@string/minNumHintTextField"
                android:inputType="number"
                android:text=""
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/maxNumTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:ems="10"
                android:hint="@string/maxNumHintTextField"
                android:inputType="number"
                android:text=""
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/customRulesLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/customRulesLabel"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/arrowButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/customRulesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/numberLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numberLabel"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/numberTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numberHintTextField"
            android:inputType="number"
            android:minHeight="50dp"
            android:text="" />

        <TextView
            android:id="@+id/attemptsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attemptsLabel"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/attemptsTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/attemptsHintTextField"
            android:inputType="number"
            android:minHeight="50dp"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStartClick"
        android:text="@string/startButton" />

</LinearLayout>