<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.GameActivity">

    <TextView
        android:id="@+id/guessLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guessLabel"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/guessTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/guessHintTextField"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="" />

    <TextView
        android:id="@+id/attemptsCounterLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <Button
        android:id="@+id/GuessButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onGuessClick"
        android:text="@string/guessButton" />

    <TextView
        android:id="@+id/guessResultLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp" />
</LinearLayout>